# big-salad

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.python-pinner.yaml  docker-compose.release-base.yaml  docker-compose.release.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  wait-for-db.sh
requirements/: build.txt  dev.txt  main.txt
src/big_salad/: cli.py  compare.py  config.py  formatting.py  host.py  load_file.py  rds.py  rds_models.py  sql.py  sqla.py
src/big_salad/aws_metrics_collector/: __init__.py  aws.py  rds.py  utils.py
src/big_salad/host_scripts/: keyboard_swap.py
tests/big_salad/: test_cli.py
